# fantastic-funicular

./: .gitignore  .pre-commit-config.yaml  DOCUMENTATION.md  MCP_TOOL_USAGE.md  README.md  cleanup_gui.py  debug_actual_usage.py  debug_clear_chats.py  debug_issues.py  demo_model_management.py  pyproject.toml  pytest.ini  requirements.txt  test_amazing.py  test_app.py  test_app_quick.py  test_app_startup.py  test_chat_memory_integration.py  test_clear_functionality.py  test_collections.py  test_comprehensive.py  test_comprehensive_functionality.py  test_enhanced_chat.py  test_enhanced_messaging.py  test_enhanced_prompt.py  test_enum_import.py  test_enum_keys.py  test_event_loop_fix.py  test_final.py  test_final_memory.py  test_gui_components.py  test_improvements.py  test_memory.py  test_memory_comprehensive.py  test_memory_debug.py  test_memory_debug_fixed.py  test_memory_integration.py  test_memory_order.py  test_memory_panel_exact.py  test_message_context.py  (+24 more)
scripts/: run.sh  setup.sh  verify_setup.py
src/: __init__.py  main.py  main_simple.py
src/config/: __init__.py  manager.py  schema.py  validators.py
src/core/: __init__.py  chat_manager.py  config.py  model_manager.py  models.py  rag_system.py  session_manager.py
src/gui/: __init__.py  app.py  compat.py  theme.py  theme_fixes.py
src/gui/screens/: __init__.py  advanced_memory_screen.py  advanced_settings.py  chat_screen.py  chat_screen_v2.py  enhanced_chat_screen.py  file_management_screen.py  mcp_management_screen.py  memory_screen.py  model_management_screen.py  provider_config_screen.py  settings_screen.py  simple_memory_screen.py  splash_screen.py
src/mcp/: __init__.py  async_bridge.py  client.py  manager.py  subprocess_client.py
src/memory/: __init__.py  intelligent_analyzer.py  manager.py  optimized_operations.py  safe_operations.py  vector_store.py
src/providers/: __init__.py  lmstudio_provider.py  ollama_provider.py  ollama_sync.py  openai_provider.py
src/utils/: __init__.py  embeddings.py  logger.py  suppress_warnings.py
tests/: __init__.py  conftest.py  run_tests.py
tests/integration/: test_chat_memory_integration.py  test_mcp_config_persistence.py  test_mcp_tool_calling.py
tests/unit/: test_chat_manager.py  test_gui_components.py  test_mcp_manager.py  test_memory_manager.py  test_providers.py
(+5 files in other folders)
